spec/fail/badcalls.ulg
# Test function to emit invalid calls to
fn foo(a: Number, b: String): Number
   a
end

foo() # !> Too few arguments to call
foo(100) # !> Too few arguments to call
foo(100, '', 100) # !> Too many arguments to call
foo(false, '', 100) # !> Too many arguments to call
foo(100, '', '', false) # !> Too many arguments to call

foo(100, 100) # !> 12:9:error: Invalid argument. Expected 'String' but found 'Number'

# !> 16:4:error: Invalid argument. Expected 'Number' but found 'String'
# !> 16:13:error: Invalid argument. Expected 'String' but found 'Bool'
foo('hello', false)